add flags + more improvements
